--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,7 +10,7 @@
 
 body {
     background-color: #155264;
-    height: 100vh;
+    height: 100%;
     width: 100%;
     display: flex;
     align-items: center;
